--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ p::first-letter {
   display: flex;
   flex-direction: column;
 }
+.test:hover {
+  scale: 2;
+  transition: all 2s;
+}
 @media (min-width: 400px) {
   .grid {
     display: grid;
@@ -45,5 +49,17 @@ p::first-letter {
     grid-template-columns: repeat(4, 1fr);
   }
 }
-@media (prefers-color-scheme: dark) {
+@media (prefers-reduced-motion: reduce) {
+  * {
+    /* animation: none;
+    transition: none;
+    scroll-behavior: none; */
+  }
+}
+@media (orientation: landscape) {
+
+}
+
+@supports not (display: grid;) {
+  
 }
